--- a/templates/services.html.twig
+++ b/templates/services.html.twig
@@ -13,22 +13,47 @@
 			<p>Communiquer par des vidéos est le meilleur moyen pour toucher rapidement une nouvelle clientèle. Nous vous proposons toute une gamme de service adapté de la consrtuction d'un site vitrine, à l'animation de réseaux sociaux.</p>
 		</section>
 
-		<section class="container">
-			{% for service in services %}
+		{% if categorie.id != 5 %}
 
-				<div class="card mb-3">
-					<img class="card-img-top" src="{{asset('assets/img/img_service/' ~ service.ImageService)}}" alt="Card image cap">
-					<div class="card-body">
-						<h2 class="card-title">{{service.name}}</h2>
-						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<p class="card-text">
-							<small class="text-muted">Last updated 3 mins ago</small>
-						</p>
+			<section class="container">
+				{% for service in services %}
+
+					<div class="card mb-3">
+						<img class="card-img-top" src="{{asset('assets/img/img_service/' ~ service.ImageService)}}" alt="Card image cap">
+						<div class="card-body">
+							<h2 class="card-title">{{service.name}}</h2>
+							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+							<p class="card-text">
+								<small class="text-muted">Last updated 3 mins ago</small>
+							</p>
+						</div>
 					</div>
-				</div>
 
-			{% endfor %}
-		</section>
+				{% endfor %}
+			</section>
+
+		{% else %}
+
+			<section class="container">
+
+				{% for matosCatego in matosCategos %}
+					<div class="card mb-3">
+						<img class="card-img-top" src="{{asset('assets/img/img_matos_catego/' ~ matosCatego.matosCategoImage)}}" alt="{{matosCatego.matosCategoImageAlt}}">
+						<div class="card-body">
+							<h2 class="card-title">{{matosCatego.name}}</h2>
+							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+							<p class="card-text">
+								<small class="text-muted"><a href="{{ path('matos-categorie', {'id': matosCatego.id}) }}">{{matosCatego.name}}</a></small>
+							</p>
+						</div>
+					</div>
+
+				{% endfor %}
+
+			</section>
+
+		{% endif %}
+
 	</main>
 
 {% endblock %}
