--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -24,7 +24,7 @@
 					<img class="card-img-top" src="{{asset('assets/img/img_catego/' ~ categorie.ImageCatego)}}" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">{{categorie.title}}</h2> 
-						<p class="card-text">{{categorie.subTitle}}</p>
+						<p class="card-text">{{categorie.subtitle}}</p>
 						<p class="card-text">
 							<small class="text-muted"  ><a href="{{ path('services', {'id': categorie.id}) }}">{{categorie.title}}</a></small>
 						</p>
