--- a/templates/admin/update-matos-catego.html.twig
+++ b/templates/admin/update-matos-catego.html.twig
@@ -10,7 +10,7 @@
 	{{ form_start(form) }}
 	<div class="container">
 		<img src="{{asset('assets/img/img_matos_catego/' ~ oldImage)}}" alt="">
-		{{ form( form, {'action': path('modifier-matos-catego', {'id': id}) }) }}
+		{{ form( form, {'action': path('update-matos-categorie', {'id': id}) }) }}
 		</div>
 		
 
