--- a/templates/panier.html.twig
+++ b/templates/panier.html.twig
@@ -47,7 +47,7 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="3">Total</td>
+				<td colspan="3">Total HT </td>
 				<td class="text-end">{{ total }}
 					€</td>
 				<td>
