--- a/templates/admin/gerer-asso.html.twig
+++ b/templates/admin/gerer-asso.html.twig
@@ -34,7 +34,7 @@
 						<td>
 							<a href="{{ path('modifier-asso', {'id': a.id}) }}" title="Modifier cet asso">{{ a.nameAsso }}</a>
 						</td>
-						<td><img src="{{ asset('/assets/img/img_asso/' ~ a.assoImage) }}" style="width:50px;height:50px;"/></td>
+						<td><img src="{{ asset('/assets/img/img_assos/' ~ a.assoImage) }}" style="width:50px;height:50px;"/></td>
 						<td>{{a.lienAsso}}</td>
                         <td>{{a.resoAsso}}</td>
                         <td>{{a.textAsso}}</td>
