--- a/templates/layout/layout.html.twig
+++ b/templates/layout/layout.html.twig
@@ -5,8 +5,8 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>
-			{% block title %}Weplus |
+		<title>Weplus |
+			{% block title %}
 			{% endblock %}
 		</title>
 
@@ -14,22 +14,39 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
-	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
 		{% endblock %}
 
-		{% block javascripts %} 
+		{% block javascripts %}
 			{#{{ encore_entry_script_tags('app') }}#}
 		{% endblock %}
 	</head>
 
 	<body>
+		<nav class="navbar navbar-expand">
+		{% set route = app.request.get('_route') %}
+			<a class="nav-link text-success" href="{{ path('accueil') }}">Accueil</a>
+			<a class="nav-link text-success" href="{{ path('concept') }}">Le Concept</a>
+			{% set chemin = app.request.uri %}
+			{% if 'admin' in chemin %}
+			<a class="nav-link text-success" href="{{ path('gerer-categorie') }}">Les catégories de services</a>
+			<a class="nav-link text-success" href="{{ path('gerer-services') }}">Les Services</a>
+			<a class="nav-link text-success" href="{{ path('gerer-matos-categorie') }}">Les catégorie de matériel</a>
+			<a class="nav-link text-success" href="{{ path('gerer-matos') }}">Le matériel à louer</a>
+			<a class="nav-link text-success" href="{{ path('gerer-cause') }}">Les causes défendu par Weplus</a>
+			<a class="nav-link text-success" href="{{ path('gerer-asso') }}">Les associations partenaires</a>
+			<a class="nav-link text-success" href="{{ path('gerer-entreprise') }}">Les entreprises partenaire</a>
 
-		{{ render(controller('App\\Controller\\CategorieController::retrieveAll'))}}
+				{% else %}
+					{{ render(controller('App\\Controller\\CategorieController::retrieveAll'))}}
+			{% endif %}
+		</nav>
+
 		{% block body %}{% endblock %}
 		<!-- JavaScript Bundle with Popper -->
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 	</body>
 </html>
