--- a/templates/matos.html.twig
+++ b/templates/matos.html.twig
@@ -28,15 +28,19 @@
 						</button>
 					</p>
 				</div>
-				<div class="container">					
+				<div class="container">
+				<form action="{{path("panier-ajout")}}" method="post">					
 						{% for a in accessoires %}
 						
-							<button class="btn btn-success" type="button">
+							<input name="{{a.id}}" class="btn btn-success" type="checkbox" value="{{a.id}}">
 							<h3>{{a.nameMatos}}</h3>
 							<img class="card-img" style="width:auto; height:150px;" src="{{asset('assets/img/img_matos/' ~ a.matosImage)}}" alt="{{mato.MatosImageAlt}}">
-							</button>
+							
 						
 						{% endfor %}
+						<input name="matoId" type="hidden" value="{{mato.id}}">
+						<input type="submit" value="Ajouter au panier">
+				</form>
 					
 				</div>
 			</div>
