--- a/templates/devis-variable.html.twig
+++ b/templates/devis-variable.html.twig
@@ -1,92 +1,8 @@
 <html>
-	<style type="text/css">
-	body{
-		max-width: 1500px;
-		max-height: 2000px;
-	}
-
-	header{
-		display: flex;
-		justify-content: space-between;
-	}
-	
-	h2{
-		max-width: 60%;
-		background-color: #25be85;
-		color: white;
-		margin: 0;
-		padding: 0.2rem;
-	}
-	table tr{
-		display: flex;
-		justify-content: space-between;
-	}
-
-	#logo{
-		max-width: 200px;
-		height: auto;
-	}
-
-	#client{
-		margin-top: 10rem;
-	}
-	#matos-louer{
-		width: 100%;		
-	}
-
-	#matos-louer thead{
-		width: 100%;
-		background: #25be85;
-		color: white;
-		border: none;
-	}
-	table, thead, th{
-		border-collapse: collapse;
-		border: none;
-	}
-
-	#tva{
-		display: flex;
-		justify-content: space-between;
-		margin-top: 2rem;
-	}
-	
-
-	#details{
-		width: 30%;
-	}
-	#details table{
-		width: 100%;
-	}
-
-	#bon h2{
-		text-align: center;
-	}
-	#bon p{
-		margin-top: 0.2rem;
-		margin-bottom: 4rem;
-	}
-
-	#coordonnee table{
-		width: 60%;
-	}
-
-	footer{
-		width: 100%;
-		display: flex;
-		justify-content: center;
-	}
-	footer p{
-		width: 70%;
-		text-align: center;
-	}
-	
-	
-	</style>
 	<body>
 		<header>
 			<div id="Weplus">
-				<img id="logo" src="{{asset('assets/img/logo_weplus.png')}}">
+				<img src="{{asset('assets/img/logo_weplus.png')}}">
 				<p>31 boulevard Preuilly 37000 - TOURS</p>
 				<p>Siret : 84114424900023</p>
 				<h3>Weplus</h3>
@@ -96,18 +12,18 @@
 				</p>
 			</div>
 			<div id="client">
-				<h3>Sublet Thomas</h3>
-			<p>58 avenue André Maginot - Tours 37100</p>
+				<h3>{{nom}} {{prenom}}</h3>
+				<p>{{adresse}}</p>
 			</div>
 			<div id="devis">
 			<h1>Devis</h1>
-			<p>Date : 17/05/2021</p>
-			<p>Devis valable jusqu'au 24/05/2021</p>
+			<p>Date : {{date}}</p>
+			<p>Devis valable jusqu'au {{date +7}}</p>
 			</div>
 		</header>
 
 		<main>
-			<h3>Location de matériel audiovisuel pour 2 jours</h3>
+			<h2>Location de matériel audiovisuel pour {{(date de fin - date de début)/60/60/24}}</h2>
 			<table id="matos-louer">
 				<thead>
 					<tr>
@@ -120,16 +36,16 @@
 					</tr>
 				</thead>
 				<tbody>
-					
+					{% for a in panier %}
 					<tr>
-						<td>Camera</td>
-						<td>1</td>
+						<td>{{a.nameMatos}}</td>
+						<td>{{a.quantite}}</td>
 						<td></td>
-						<td>300 €</td>
-						<td> 300 € </td>
-						<td>20%</td>
+						<td>{{a.prixHt}}</td>
+						<td>{{(a.prixHT)*(a.quantite)}}</td>
+						<td>O,OO%</td>
 					</tr>
-					
+					{% endfor %}
 				</tbody>
 			</table>
 
@@ -147,10 +63,10 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>Exonéré</td>
-								<td>300,00 €</td>
-								<td>20,00%</td>
-								<td>60,00 €</td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
 							</tr>
 						</tbody>
 					</table>
@@ -159,15 +75,15 @@
 					<table>
 						<tr>
 							<td>Total HT</td>
-							<td>300 €</td>
+							<td>{{panier.total}}</td>
 						</tr>
 						<tr>
 							<td>TVA</td>
-							<td>20 %</td>
+							<td>{{tva}}</td>
 						</tr>
 						<tr>
 							<td>Total TTC</td>
-							<td>360 €</td>
+							<td>{{(panier.total)+((panier.total)*(tva))}}</td>
 						</tr>
 					</table>
 				</div>
@@ -175,12 +91,12 @@
 			<section id="reglement">
 				<table>
 					<tr>
-						<td>Règlement</td>
-						<td>Chèque</td>
+						<td></td>
+						<td></td>
 					</tr>
 					<tr>
-						<td>échéances</td>
-						<td>30/06/2021</td>
+						<td></td>
+						<td></td>
 					</tr>
 				</table>
 			</section>
