--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 
-<title>Hello AdminController!</title>
+<title>Hello Administrator!</title>
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello Administrator ! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/weplus/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/weplus/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
+    <p>Toute modification apporter par l'administrateur sur la partie admin aura lieu instantanément sur le site. Réfléchissez donc bien aux modifications que vous voulez apporter.</p>
+    <p>Il appartient à l'administrateur que les images uploadées correspondent à un format web définit comme ceci :  taille max : 1920x1080px, densité de pixel : 72 dpi, poids global de l'image en moyenne en dessous de 500ko. </p>
+    <p></p>
+
 </div>
 {% endblock %}
