--- a/templates/layout/layout.html.twig
+++ b/templates/layout/layout.html.twig
@@ -43,8 +43,11 @@
 					{{ render(controller('App\\Controller\\CategorieController::retrieveAll'))}}
 			{% endif %}
 		</nav>
+		
+		<div class="container m-5">
 
 		{% block body %}{% endblock %}
+		</div>
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
