--- a/templates/services.html.twig
+++ b/templates/services.html.twig
@@ -41,8 +41,8 @@
 
 				{% for matosCatego in matosCategos %}
 					{% if matosCatego.name != 'Accessoires'%}
-						<div class="card mb-3">
-							<img class="card-img-top" src="{{asset('assets/img/img_matos_catego/' ~ matosCatego.matosCategoImage)}}" alt="{{matosCatego.matosCategoImageAlt}}">
+						<div class="card mb-3" >
+							<img class="card-img-top" style="max-height: 300px; width: auto; object-fit: cover;" src="{{asset('assets/img/img_matos_catego/' ~ matosCatego.matosCategoImage)}}" alt="{{matosCatego.matosCategoImageAlt}}">
 							<div class="card-body">
 								<h2 class="card-title">{{matosCatego.name}}</h2>
 
