--- a/templates/admin/create-catego.html.twig
+++ b/templates/admin/create-catego.html.twig
@@ -9,7 +9,14 @@
 
 	{{ form_start(form) }}
 	<div class="container">
-		{{ form_widget(form) }}
+		{{form_row(form.Title, {'label': 'Nom de la catégorie'})}}
+		{{form_row(form.sub_title, {'label': 'Sous-titre qui apparaîtra sur la homepage.'})}}
+		{{form_row(form.description, {'label': 'Description de la catégorie de service'})}}
+		{{form_row(form.image_catego, {'label': 'Image de la catégorie, qui apparaîtra sur la homepage.'})}}
+		{{form_row(form.image_catego_alt, {'label': 'Description du fichier à destination des malvoyants'})}}
+		{{form_row(form.google_description, {'label': 'Description google'})}}
+	
+		{{form_row(form.submit, {'label': 'Ajouter une catégorie de services'})}}
 
 	</div>
 	{{ form_end(form) }}
