--- a/templates/admin/update-asso.html.twig
+++ b/templates/admin/update-asso.html.twig
@@ -7,12 +7,17 @@
 
 	<h1>Admin</h1>
 
-	{{ form_start(form) }}
+	{{ form_start(form, {'action': path('update-asso', {'id': asso.id}) }}
 	<div class="container">
 		<img src="{{asset('assets/img/img_asso/' ~ oldImage)}}" alt="">
-		{{ form( form, {'action': path('modifier-asso', {'id': id}) }) }}
-		</div>
-		
+		{{form_row(form.nameAsso, {'label': 'Nom de l\'association'})}}
+		{{form_row(form.lienAsso, {'label': 'Lien du site de l\'association'})}}
+		{{form_row(form.resoAsso, {'label': 'lien des réseaux sociaux de l\'association'})}}
+		{{form_row(form.textAsso, {'label': 'Descriptif succint de l\'association'})}}
+		{{form_row(form.asso_image, {'label': 'Fichier image de l\'association'})}}
+		{{form_row(form.asso_image_alt, {'label': 'Description de l\'image pour les malvoyants'})}}
+		{{form_row(form.causes, {'label': 'Cause défendu par l\'association'})}}
+		{{form_row(form.submit, {'label': 'Modifier l\'association'})}}
 
 
 	</div>
