--- a/templates/admin/update-services.html.twig
+++ b/templates/admin/update-services.html.twig
@@ -7,11 +7,17 @@
 
 	<h1>Admin</h1>
 
-	{{ form_start(form) }}
+	{{ form_start(form, {'action': path('update-service', {'id': id}) }) }}
 	<div class="container">
 		<img src="{{asset('assets/img/img_service/' ~ oldImage)}}" alt="">
-		{{ form( form, {'action': path('update-service', {'id': id}) }) }}
-		</div>
+		{{form_row(form.name, {'label': 'Nom du service'})}}
+		{{form_row(form.image_service, {'label': 'image du service'})}}
+		{{form_row(form.image_service_alt, {'label': 'Description du service pour les malvoyants'})}}
+		{{form_row(form.text, {'label': 'Descriptif du service'})}}		
+		{{form_row(form.categorie, {'label': 'catégorie du service'})}}
+		{{form_row(form.brochure, {'label': 'Brochure de description de la formation'})}}
+	
+		{{form_row(form.submit, {'label': 'Modifier un service'})}}
 		
 
 
