--- a/templates/panier.html.twig
+++ b/templates/panier.html.twig
@@ -71,4 +71,4 @@
 		</a>
 	</td>
 </tr></tfoot></table><div class="container">{{ form(form, {'action': path('handlecontact')}) }}
-s</div>{% endblock %}
+</div>{% endblock %}
