--- a/templates/admin/create-cause.html.twig
+++ b/templates/admin/create-cause.html.twig
@@ -9,9 +9,15 @@
 
 	{{ form_start(form) }}
 	<div class="container">
-		{{ form_widget(form) }}
-		
-
+		{{form_row(form.nomCause, {'label': 'Nom de la catégorie'})}}
+		{{form_row(form.textCause, {'label': 'Sous-titre qui apparaîtra sur la homepage.'})}}
+		{{form_row(form.citation, {'label': 'Description de la catégorie de service'})}}
+		{{form_row(form.lienVideo, {'label': 'Image de la catégorie, qui apparaîtra sur la homepage.'})}}
+		{{form_row(form.imageCause, {'label': 'Description du fichier à destination des malvoyants'})}}
+		{{form_row(form.imageCause_alt, {'label': 'Description google'})}}
+		{{form_row(form.cause_google_description, {'label': 'Description google'})}}
+	
+		{{form_row(form.submit, {'label': 'Ajouter une causes'})}}
 
 	</div>
 	{{ form_end(form) }}
