--- a/templates/admin/update-entreprise.html.twig
+++ b/templates/admin/update-entreprise.html.twig
@@ -7,11 +7,17 @@
 
 	<h1>Admin</h1>
 
-	{{ form_start(form) }}
+	{{ form_start(form, {'action': path('modifier-entreprise', {'id': id}) }) }}
 	<div class="container">
 		<img src="{{asset('assets/img/logo_entreprise/' ~ oldImage)}}" alt="">
-		{{ form( form, {'action': path('modifier-entreprise', {'id': id}) }) }}
-		</div>
+		
+		{{form_row(form.nameEntreprise, {'label': 'Nom de l\'entreprise'})}}
+		{{form_row(form.lienEntreprise, {'label': 'Lien du site de l\'entreprise'})}}
+		{{form_row(form.logo, {'label': 'Fichier du logo de l\'entreprise'})}}
+		{{form_row(form.logo_alt, {'label': 'Description du logo à destination des malvoyants'})}}
+		{{form_row(form.causes, {'label': 'Causes'})}}
+	
+		{{form_row(form.submit, {'label': 'Modifier une entreprise'})}}
 		
 
 
