--- a/templates/admin/update-matos-catego.html.twig
+++ b/templates/admin/update-matos-catego.html.twig
@@ -7,11 +7,14 @@
 
 	<h1>Admin</h1>
 
-	{{ form_start(form) }}
+	{{ form_start(form, {'action': path('update-matos-categorie', {'id': id}) }) }}
 	<div class="container">
 		<img src="{{asset('assets/img/img_matos_catego/' ~ oldImage)}}" alt="">
-		{{ form( form, {'action': path('update-matos-categorie', {'id': id}) }) }}
-		</div>
+		{{form_row(form.name, {'label': 'Nom de la catégorie de matériel'})}}
+		{{form_row(form.matos_catego_image, {'label': 'image représentant la catégorie de matériel'})}}
+		{{form_row(form.matos_catego_image_alt, {'label': 'Description de l\'image à destination des malvoyants'})}}
+	
+		{{form_row(form.submit, {'label': 'Modifier une catégorie de matériel'})}}
 		
 
 
