--- a/templates/admin/update-matos.html.twig
+++ b/templates/admin/update-matos.html.twig
@@ -7,12 +7,19 @@
 
 	<h1>Admin</h1>
 
-	{{ form_start(form) }}
+	{{ form_start(form, {'action': path('modifier-matos', {'id': id}) }) }}
 	<div class="container">
 		<img src="{{asset('assets/img/img_matos/' ~ oldImage)}}" alt="">
-		{{ form( form, {'action': path('modifier-matos', {'id': id}) }) }}
-		</div>
-		
+		{{form_row(form.name_matos, {'label': 'Nom du matériel de location'})}}
+		{{form_row(form.stock, {'label': 'Stock'})}}
+		{{form_row(form.prix_ht, {'label': 'prix hors taxe de la location pour une journée'})}}
+		{{form_row(form.caution, {'label': 'prix de la caution'})}}
+		{{form_row(form.matos_catego, {'label': 'catégorie de matériel'})}}
+		{{form_row(form.matos_image, {'label': 'photo du matériel à louer'})}}
+		{{form_row(form.matos_image_alt, {'label': 'Description du matériel pour les malvoyants'})}}
+		{{form_row(form.accessoires, {'label': 'Accessoires possibles avec ce matériel'})}}
+	
+		{{form_row(form.submit, {'label': 'Modifier ce matériel à louer'})}}
 
 
 	</div>
